# LMStudioManager

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  lmstudio.bat  pyproject.toml
.specify/memory/: constitution.md
frontend/src/views/: Automations.jsx  Capabilities.jsx  SessionDetail.jsx  Settings.jsx
lmstudio_manager/: __init__.py  cli.py
lmstudio_manager/configs/: default.yaml
lmstudioclaw/: __init__.py  cli.py
lmstudioclaw/capabilities/: mcp_client.py  registry.py
lmstudioclaw/config/: default.yaml
lmstudioclaw/notifications/: toast.py
lmstudioclaw/sessions/: store.py
lmstudioclaw/tray/: icon.py
lmstudioclaw/web/: api.py  routes_automations.py  routes_capabilities.py  routes_settings.py
lmstudioclaw/web/static/: index.html
lmstudioclaw/web/static/assets/: index-DxhlfUiG.js  index-Rjrhqtcw.js
specs/001-agent-runtime/: quickstart.md  spec.md  tasks.md
specs/002-ui-tools-concurrency/: .spec-context.json  spec.md  tasks.md
tests/integration/: test_boot_smoke.py  test_tools_mcp_secrets.py
