[project]
name = "lmstudio-manager"
version = "1.0.0"
description = "System tray GUI manager for LM Studio model load/unload and context preferences"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.30.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "pystray>=0.19.5",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
lmstudio = "lmstudio_manager.cli:cli"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

