[project]
name = "lmstudioclaw"
version = "1.0.0"
description = "Call-based, local agent runtime powered by LM Studio (tray controller + web UI)"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.30.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "pystray>=0.19.5",
    "pillow>=10.0.0",
    "fastapi",
    "uvicorn",
    "pydantic",
    "mcp",
    "tiktoken",
    "win11toast",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
lmstudio = "lmstudioclaw.cli:cli"

[tool.setuptools.packages.find]
include = ["lmstudioclaw*"]

[tool.setuptools.package-data]
lmstudioclaw = ["config/*.yaml", "config/*.json", "web/static/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"